--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,3 @@
-// client/index.html
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,6 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
