--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="HealthMitra - Your trusted digital health companion for managing medical records and chronic disease prevention" />
     <meta name="theme-color" content="#0ea5e9" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>HealthMitra - Digital Health Companion</title>
+    <title>HealthMitra</title>
   </head>
   <body>
     <div id="root"></div>
